--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,3 +28,14 @@ jobs:
         SPRING_DATASOURCE_USERNAME: ${{ secrets.SPRING_DATASOURCE_USERNAME }}
         SPRING_DATASOURCE_PASSWORD: ${{ secrets.SPRING_DATASOURCE_PASSWORD }}
       run: mvn clean install
+
+    
+    - name: Build & push Docker image
+      uses: mr-smithers-excellent/docker-build-push@v5
+    with:
+      image: sjam16/github-actions-exjobb
+      tags: latest
+      registry: docker.io
+      dockerfile: Dockerfile
+      username: ${{ secrets.DOCKER_USERNAME }}
+      password: ${{ secrets.DOCKER_PASSWORD }}
